--- a/homework16_react/package.json
+++ b/homework16_react/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yaroslavsab.github.io/homework16_react",
+  "homepage": "https://yaroslavsab.github.io/cursor-education/homework16_react",
   "name": "homework16_react",
   "version": "0.1.0",
   "private": true,
